Closed Bug 1010556 Opened 10 years ago Closed 9 years ago

Intermittent test_bug732665.xul | Chrome should be invokable from content script with an exhausted stack: 10

Categories

(Core :: XPConnect, defect)

All
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox37 --- unaffected
firefox38 --- unaffected
firefox39 --- fixed
firefox-esr31 --- unaffected

People

(Reporter: KWierso, Assigned: nbp)

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

https://tbpl.mozilla.org/php/getParsedLog.php?id=39662558&tree=Fx-Team
Windows XP 32-bit fx-team pgo test mochitest-other on 2014-05-14 09:20:55 PDT for push c0efb7fe87e3

slave: t-xp32-ix-062




09:26:22     INFO -  3343 INFO TEST-START | chrome://mochitests/content/chrome/js/xpconnect/tests/chrome/test_bug732665.xul
09:26:22     INFO -  3344 INFO TEST-INFO | dumping last 1 message(s)
09:26:22     INFO -  3345 INFO TEST-INFO | if you need more context, please use SimpleTest.requestCompleteLog() in your test
09:26:22     INFO -  3346 INFO TEST-PASS | chrome://mochitests/content/chrome/js/xpconnect/tests/chrome/test_bug732665.xul | Chrome should be able to have at least 10 heavy frames more stack than content: 186, 175
09:26:22     INFO -  3347 INFO TEST-UNEXPECTED-FAIL | chrome://mochitests/content/chrome/js/xpconnect/tests/chrome/test_bug732665.xul | Chrome should be invokable from content script with an exhausted stack: 10
09:26:22     INFO -  3348 INFO TEST-INFO | MEMORY STAT vsize after test: 647094272
09:26:22     INFO -  3349 INFO TEST-INFO | MEMORY STAT vsizeMaxContiguous after test: 257687552
09:26:22     INFO -  3350 INFO TEST-INFO | MEMORY STAT residentFast after test: 401956864
09:26:22     INFO -  3351 INFO TEST-INFO | MEMORY STAT heapAllocated after test: 86665158
09:26:22     INFO -  3352 INFO TEST-END | chrome://mochitests/content/chrome/js/xpconnect/tests/chrome/test_bug732665.xul | finished in 82ms
Assignee: nobody → nicolas.b.pierron
I added a JS shell script, which help us give a rough estimate of what are
the latest value of the frame size.  I did a measurment before and after Bug
1112164 modifications.

As I am using a different compiler than tbpl, I get different stack sizes
(which seems to be close to the MacOSX one).  So I added back to the
previous estimates, the delta noticed between these 4 builds. (~0.8k for x64,
~0.2k for x86)

For the moment, I have no idea how my patches caused such increased, so I
will open a follow-up bug to investigate what caused such increased and if
we can remove it in some way.

exec: js-bugzil.la-1112164-wip-base-opt-x64-clang33 test_bug732665_meta.js
Max stack size: 1033408 bytes
Maximum number of frames: 173
Average frame size: 5974 bytes
exec: js-bugzil.la-1112164-wip-base-dbg-x64-clang33 test_bug732665_meta.js
Max stack size: 2077040 bytes
Maximum number of frames: 124
Average frame size: 16751 bytes
exec: js-bugzil.la-1112164-wip-base-opt-x86-clang33 test_bug732665_meta.js
Max stack size: 510416 bytes
Maximum number of frames: 94
Average frame size: 5430 bytes
exec: js-bugzil.la-1112164-wip-base-dbg-x86-clang33 test_bug732665_meta.js
Max stack size: 1026432 bytes
Maximum number of frames: 80
Average frame size: 12831 bytes


exec: js-bugzil.la-1010556-wip-opt-x64-clang33 test_bug732665_meta.js
Max stack size: 1034320 bytes
Maximum number of frames: 154
Average frame size: 6717 bytes
exec: js-bugzil.la-1010556-wip-dbg-x64-clang33 test_bug732665_meta.js
Max stack size: 2061408 bytes
Maximum number of frames: 117
Average frame size: 17619 bytes
exec: js-bugzil.la-1010556-wip-opt-x86-clang33 test_bug732665_meta.js
Max stack size: 516496 bytes
Maximum number of frames: 92
Average frame size: 5615 bytes
exec: js-bugzil.la-1010556-wip-dbg-x86-clang33 test_bug732665_meta.js
Max stack size: 1020240 bytes
Maximum number of frames: 78
Average frame size: 13080 bytes
Attachment #8570049 - Flags: review?(luke)
Attachment #8570049 - Flags: feedback?(bobbyholley)
Comment on attachment 8570049 [details] [diff] [review]
Bump ASAN kTrustedScriptBuffer constant, to account for the new frame size.

Review of attachment 8570049 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks for engineering a better solution to this. :-)
Attachment #8570049 - Flags: feedback?(bobbyholley) → feedback+
Is there a way to trigger the mochitest on an Asan debug build on Try?
Comment on attachment 8570049 [details] [diff] [review]
Bump ASAN kTrustedScriptBuffer constant, to account for the new frame size.

luke> nbp: sorry, i've been busy.  feel free to pick another reviewer, though
Attachment #8570049 - Flags: review?(luke) → review?(bobbyholley)
Comment on attachment 8570049 [details] [diff] [review]
Bump ASAN kTrustedScriptBuffer constant, to account for the new frame size.

Review of attachment 8570049 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks for engineering a better solution to this. :-)
Attachment #8570049 - Flags: review?(bobbyholley) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/fa16d24d530f
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: